--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- ___________________________________________________________________Press section_________________________________________________________________________ -->
 
     <section id="press">
-      <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
+      <img class="press-image" src="images/TechCrunch.png" alt="tc-logo">
       <img class="press-image press-img-adjust" src="images/tnw.png" alt="tnw-logo">
       <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="press-image press=img-adjust" src="images/mashable.png" alt="mashable-logo">
